--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,14 @@ body {
     padding: 0;
     font-size: 18px;
     line-height: 1.75;
+    color: var(--color-text);
+}
+
+body.theme-inverse {
+    --color-text-inverse: #2c3e50;
+    --color-text: #fff;
+    background-color: var(--color-text-inverse);
+    transition: background-color 0.15s;
 }
 
 *,
@@ -15,8 +23,35 @@ body {
 :root {
     --color-theme: #42b983;
     --color-theme-hover: #38d38d;
+    --color-text: #2c3e50;
     --color-text-inverse: #fff;
     --color-border: #b1b1b1;
+    --color-ghost: #f6f8fa;
+}
+
+
+table {
+    border-collapse: collapse;
+    margin: 1rem 0;
+    display: block;
+    overflow-x: auto
+}
+
+tr {
+    border-top: 1px solid var(--color-border)
+}
+
+th {
+    background-color: var(--color-ghost)
+}
+
+td,th {
+    border: 1px solid var(--color-border);
+    padding: .6em 1em
+}
+
+a {
+    color: #42b983;
 }
 
 .text-center {
