--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -54,6 +54,21 @@ a {
     color: #42b983;
 }
 
+
+ul,
+li,
+ol {
+    padding-left: 0;
+    margin: 0;
+}
+
+pre {
+    padding: 8px 16px;
+    background-color: var(--color-ghost);
+    border-radius: 8px;
+    font-size: 0.75rem;
+}
+
 .text-center {
     text-align: center;
 }
